--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -33,6 +33,7 @@ Interview responses from goal clarification:
 - [x] 1.3 Add selectedIndex prop to LogTable and pass to children - 16d8c8a
 - [x] 1.4 Add visual selection highlight to LogRow - f874ede
 - [x] 1.5 Add visual selection highlight to LogCard - bc4b4c7
+- [x] V1 [VERIFY] Quality checkpoint - fixed a11y warnings, passed lint/check
 
 ## Current Task
 
@@ -40,7 +41,7 @@ Awaiting next task
 
 ## Next
 
-Task V1: [VERIFY] Quality checkpoint
+Task 1.6: Add Enter to open modal for selected log
 
 ## Learnings
 
@@ -67,6 +68,7 @@ Task V1: [VERIFY] Quality checkpoint
 - scrollIntoView({ block: 'nearest' }) prevents unnecessary scrolling when selected item is already visible.
 - Task planning: 22 total tasks across 4 phases (POC: 12, Refactoring: 3, Testing: 5, Quality Gates: 3).
 - Quality checkpoints inserted every 2-3 tasks to catch type/lint issues early.
+- `aria-selected` is only valid for roles like option/row/tab, not `button`. Use `aria-current="true"` for selected state on button-like elements.
 - POC phase focuses on getting all shortcuts working before adding tests - validates idea fast.
 - SearchInput modification is critical path - must expose ref before / shortcut can work.
 - KeyboardHelpModal follows exact same pattern as LogDetailModal for consistency.
