feat(keyboard): add Enter to open log detail modal

--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -34,6 +34,7 @@ Interview responses from goal clarification:
 - [x] 1.4 Add visual selection highlight to LogRow - f874ede
 - [x] 1.5 Add visual selection highlight to LogCard - bc4b4c7
 - [x] V1 [VERIFY] Quality checkpoint - fixed a11y warnings, passed lint/check
+- [x] 1.6 Add Enter to open modal for selected log - 300b119
 
 ## Current Task
 
@@ -41,7 +42,7 @@ Awaiting next task
 
 ## Next
 
-Task 1.6: Add Enter to open modal for selected log
+Task 1.7: Verify Escape closes modal (existing behavior)
 
 ## Learnings
 
