--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -35,6 +35,7 @@ Interview responses from goal clarification:
 - [x] 1.5 Add visual selection highlight to LogCard - bc4b4c7
 - [x] V1 [VERIFY] Quality checkpoint - fixed a11y warnings, passed lint/check
 - [x] 1.6 Add Enter to open modal for selected log - 300b119
+- [x] 1.7 Verify Escape closes modal - verified (no code changes needed)
 
 ## Current Task
 
@@ -42,7 +43,7 @@ Awaiting next task
 
 ## Next
 
-Task 1.7: Verify Escape closes modal (existing behavior)
+Task 1.8: Add / to focus search and Escape to blur
 
 ## Learnings
 
@@ -75,3 +76,5 @@ Task 1.7: Verify Escape closes modal (existing behavior)
 - KeyboardHelpModal follows exact same pattern as LogDetailModal for consistency.
 - Filter reset logic must be added to all 4 filter handlers (search, level, time range, clear).
 - Component tests needed for LogRow, LogCard, SearchInput, and KeyboardHelpModal - all have new props/behavior.
+- LogDetailModal already handles Escape via `<svelte:document onkeydown>` with focus restoration logic using `previouslyFocusedElement`.
+- `closeDetailModal()` clears modal state but preserves `selectedIndex` - selection survives modal close automatically.
