--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -40,6 +40,7 @@ Interview responses from goal clarification:
 - [x] 1.9 Add l to toggle live mode - 58c4827
 - [x] V2 Quality checkpoint - passed (no fixes needed)
 - [x] 1.10 Create KeyboardHelpModal component - 102c61d
+- [x] 1.11 Add ? shortcut to open help modal - 7a7cd75
 
 ## Current Task
 
@@ -47,7 +48,7 @@ Awaiting next task
 
 ## Next
 
-Task 1.11: Add ? shortcut to open help modal
+Task 1.12: POC Checkpoint - End-to-end verification
 
 ## Learnings
 
