feat(keyboard): complete POC for keyboard shortcuts

--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -41,14 +41,15 @@ Interview responses from goal clarification:
 - [x] V2 Quality checkpoint - passed (no fixes needed)
 - [x] 1.10 Create KeyboardHelpModal component - 102c61d
 - [x] 1.11 Add ? shortcut to open help modal - 7a7cd75
+- [x] 1.12 POC Checkpoint - End-to-end verification - bb6555c
 
 ## Current Task
 
-Awaiting next task
+POC Phase 1 complete - all 12 tasks finished
 
 ## Next
 
-Task 1.12: POC Checkpoint - End-to-end verification
+Task 2.1: Add selection reset on filter changes (Phase 2: Refactoring)
 
 ## Learnings
 
@@ -83,3 +84,4 @@ Task 1.12: POC Checkpoint - End-to-end verification
 - Component tests needed for LogRow, LogCard, SearchInput, and KeyboardHelpModal - all have new props/behavior.
 - LogDetailModal already handles Escape via `<svelte:document onkeydown>` with focus restoration logic using `previouslyFocusedElement`.
 - `closeDetailModal()` clears modal state but preserves `selectedIndex` - selection survives modal close automatically.
+- POC Phase 1 complete: All shortcuts (j/k/Enter/Escape///l/?) implemented and verified via type check + lint + build. Ready for manual testing.
