test(keyboard): add unit tests for keyboard utilities
- Test shouldBlockShortcut function:
  - Blocks shortcuts for form elements (INPUT, TEXTAREA, SELECT)
  - Blocks shortcuts during IME composition
  - Blocks shortcuts when modifier keys are pressed (Ctrl, Alt, Meta)
  - Allows shortcuts for regular elements (DIV, TABLE, BUTTON, BODY)
  - Handles null target gracefully
- Test FORM_ELEMENTS constant contains all expected elements
- Test SHORTCUTS array contains all expected shortcuts with properties

--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -45,6 +45,8 @@ Interview responses from goal clarification:
 - [x] 2.1 Add selection reset on filter changes - 286f937
 - [x] 2.2 Add screen reader announcements for navigation - 6369ac2
 - [x] 2.3 Code review and cleanup - ae25858
+- [x] V3 Quality checkpoint - passed (no fixes needed)
+- [x] 3.1 Unit tests for keyboard utilities - 54f0721
 
 ## Current Task
 
@@ -52,7 +54,7 @@ Awaiting next task
 
 ## Next
 
-Task V3: Quality checkpoint
+Task 3.2: Component tests for LogRow isSelected
 
 ## Learnings
 
@@ -90,3 +92,5 @@ Task V3: Quality checkpoint
 - POC Phase 1 complete: All shortcuts (j/k/Enter/Escape///l/?) implemented and verified via type check + lint + build. Ready for manual testing.
 - Screen reader announcements use `announceToScreenReader` utility from focus-trap.ts - track prevIndex to announce only on actual selection change.
 - Code cleanup: Remove unused exports (knip catches these), add loading state guards to navigation shortcuts, keep internal types non-exported.
+- Unit tests naming convention: files must end with `.unit.test.ts` (not `.test.ts`) for vitest unit project to detect them.
+- Unit tests run in Node.js environment without DOM - mock HTMLElement with plain objects containing `tagName` property instead of using `document.createElement`.
