test(keyboard): add component tests for LogRow isSelected

--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -47,6 +47,7 @@ Interview responses from goal clarification:
 - [x] 2.3 Code review and cleanup - ae25858
 - [x] V3 Quality checkpoint - passed (no fixes needed)
 - [x] 3.1 Unit tests for keyboard utilities - 54f0721
+- [x] 3.2 Component tests for LogRow isSelected - df359a1
 
 ## Current Task
 
@@ -54,7 +55,7 @@ Awaiting next task
 
 ## Next
 
-Task 3.2: Component tests for LogRow isSelected
+Task 3.3: Component tests for LogCard isSelected
 
 ## Learnings
 
