chore(spec): mark task 4.2 complete - PR created and CI passed
- PR #10 created with full description
- Fixed E2E test failure (Enter key preventDefault issue)
- All CI checks passing

--- a/specs/keyboard-shortcuts/.progress.md
+++ b/specs/keyboard-shortcuts/.progress.md
@@ -51,6 +51,9 @@ Interview responses from goal clarification:
 - [x] 3.3 Component tests for LogCard isSelected - c78b120
 - [x] 3.4 Component tests for SearchInput ref/onEscape - efdbfa5
 - [x] 3.5 Component tests for KeyboardHelpModal - 4a47c8b
+- [x] V4 Quality checkpoint - fc08158
+- [x] 4.1 Full local CI verification - passed
+- [x] 4.2 Create PR and verify CI pipeline - PR #10 created, CI passed (8edb902)
 
 ## Current Task
 
@@ -58,7 +61,7 @@ Awaiting next task
 
 ## Next
 
-Task V4: Quality checkpoint
+Task 4.3: Acceptance criteria checklist
 
 ## Learnings
 
@@ -98,3 +101,4 @@ Task V4: Quality checkpoint
 - Code cleanup: Remove unused exports (knip catches these), add loading state guards to navigation shortcuts, keep internal types non-exported.
 - Unit tests naming convention: files must end with `.unit.test.ts` (not `.test.ts`) for vitest unit project to detect them.
 - Unit tests run in Node.js environment without DOM - mock HTMLElement with plain objects containing `tagName` property instead of using `document.createElement`.
+- Enter key handler must only call preventDefault when a log is selected and modal is opened - otherwise it blocks buttons from working when focused (e.g., filter-toggle button).
