--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -10,6 +10,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 
 ## Completed Tasks
 - [x] 1.1 Create package structure - c83c5b5
+- [x] 1.2 Implement types module - 948626d
 
 ## Current Task
 Awaiting next task
@@ -30,4 +31,4 @@ Awaiting next task
 - hatchling requires README.md to exist for build
 
 ## Next
-Task 1.2: Implement types module
+Task 1.3: Implement errors module
