--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -12,6 +12,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 1.1 Create package structure - c83c5b5
 - [x] 1.2 Implement types module - 948626d
 - [x] 1.3 Implement errors module - 0ca0585
+- [x] 1.4 Implement config module - 4412b95
 
 ## Current Task
 Awaiting next task
@@ -32,4 +33,4 @@ Awaiting next task
 - hatchling requires README.md to exist for build
 
 ## Next
-Task 1.4: Implement config module
+Task 1.5: Implement transport module
