feat(python-sdk): add source location capture
Implement source_location module with:
- SourceLocation dataclass (frozen, slots)
- capture_source_location() function using inspect.stack()
- Supports skip_frames parameter to skip SDK internals
- Returns None when stack depth exceeded

Satisfies: FR-11, AC-6.1, AC-6.2, AC-6.3

--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -15,6 +15,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 1.4 Implement config module - 4412b95
 - [x] 1.5 Implement transport module - 7f6938c
 - [x] 1.6 Implement queue module - 5e85776
+- [x] 1.7 Implement source_location module - 5ae4d54
 
 ## Current Task
 Awaiting next task
@@ -35,6 +36,7 @@ Awaiting next task
 - hatchling requires README.md to exist for build
 - BatchQueue uses threading.Timer with daemon=True to auto-cleanup on program exit
 - _trigger_flush handles both running event loop (create_task) and sync context (asyncio.run)
+- Python's inspect.stack() provides structured FrameInfo objects directly - much simpler than parsing JS Error.stack strings
 
 ## Next
-Task 1.7: Implement source_location module
+Task 1.8: Implement client module
