--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -16,6 +16,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 1.5 Implement transport module - 7f6938c
 - [x] 1.6 Implement queue module - 5e85776
 - [x] 1.7 Implement source_location module - 5ae4d54
+- [x] 1.8 Implement client module - 9ffb954
 
 ## Current Task
 Awaiting next task
@@ -37,6 +38,8 @@ Awaiting next task
 - BatchQueue uses threading.Timer with daemon=True to auto-cleanup on program exit
 - _trigger_flush handles both running event loop (create_task) and sync context (asyncio.run)
 - Python's inspect.stack() provides structured FrameInfo objects directly - much simpler than parsing JS Error.stack strings
+- Client uses _owns_queue flag to track if it created the queue (needed for child loggers sharing parent queue)
+- TYPE_CHECKING block prevents circular imports and satisfies ruff TC001 lint rule
 
 ## Next
-Task 1.8: Implement client module
+Task 1.9: Wire up __init__.py exports
