--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -17,6 +17,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 1.6 Implement queue module - 5e85776
 - [x] 1.7 Implement source_location module - 5ae4d54
 - [x] 1.8 Implement client module - 9ffb954
+- [x] 1.9 Wire up __init__.py exports - 3c8711d
 
 ## Current Task
 Awaiting next task
@@ -42,4 +43,4 @@ Awaiting next task
 - TYPE_CHECKING block prevents circular imports and satisfies ruff TC001 lint rule
 
 ## Next
-Task 1.9: Wire up __init__.py exports
+Task 1.10: POC Checkpoint
