--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -4,7 +4,7 @@
 Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity. The server is ready, and we need a Python SDK so Python developers can also use the logging platform.
 
 ## Status
-- Phase: Execution (Phase 1 - POC)
+- Phase: Execution (Phase 2 - Refactoring)
 - Started: 2026-01-16
 - Artifacts generated: research.md, requirements.md, design.md, tasks.md
 
@@ -19,9 +19,10 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 1.8 Implement client module - 9ffb954
 - [x] 1.9 Wire up __init__.py exports - 3c8711d
 - [x] 1.10 POC Checkpoint - 0e0046e
+- [x] 2.1 Add thread safety to queue - f4c7d26
 
 ## Current Task
-Awaiting next task (Phase 1 POC complete)
+Awaiting next task
 
 ## Learnings
 
@@ -43,6 +44,8 @@ Awaiting next task (Phase 1 POC complete)
 - Client uses _owns_queue flag to track if it created the queue (needed for child loggers sharing parent queue)
 - TYPE_CHECKING block prevents circular imports and satisfies ruff TC001 lint rule
 - mypy type stubs may not support newer dataclass features like slots=True - removed for compatibility
+- Thread safety was already implemented during POC - task 2.1 verified and fixed lint issues (TC001, UP035)
+- UP035: Use collections.abc instead of typing for Awaitable, Callable in Python 3.9+
 
 ## Next
-Phase 2: Refactoring (Task 2.1: Add thread safety to queue)
+Task 2.2: Improve error messages
