--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -22,6 +22,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 2.1 Add thread safety to queue - f4c7d26
 - [x] 2.2 Improve error messages - b7727fe
 - [x] 2.3 Add type hints throughout - (verified)
+- [x] 2.4 Add README and LICENSE - b6f61bd
 
 ## Current Task
 Awaiting next task
@@ -53,4 +54,4 @@ Awaiting next task
 - mypy --strict passes already - type hints were comprehensive from the start
 
 ## Next
-Task 2.4: Add README and LICENSE
+Task 3.1: Create test fixtures
