test(python-sdk): add test fixtures
Add pytest fixtures for SDK testing:
- Valid/invalid configuration fixtures
- Mock HTTP response fixtures (success, error, rate limit)
- Sample log entry fixtures
- Callback capture helpers for testing events
- Factory fixtures for creating test data

--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -4,7 +4,7 @@
 Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity. The server is ready, and we need a Python SDK so Python developers can also use the logging platform.
 
 ## Status
-- Phase: Execution (Phase 2 - Refactoring)
+- Phase: Execution (Phase 3 - Testing)
 - Started: 2026-01-16
 - Artifacts generated: research.md, requirements.md, design.md, tasks.md
 
@@ -23,6 +23,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 2.2 Improve error messages - b7727fe
 - [x] 2.3 Add type hints throughout - (verified)
 - [x] 2.4 Add README and LICENSE - b6f61bd
+- [x] 3.1 Create test fixtures - 607f87a
 
 ## Current Task
 Awaiting next task
@@ -52,6 +53,9 @@ Awaiting next task
 - Actionable error messages should include: what failed, why, and how to fix it
 - API keys should be masked in error messages to avoid leaking credentials in logs
 - mypy --strict passes already - type hints were comprehensive from the start
+- pytest --collect-only exits 5 with no tests (expected) but fixtures load fine
+- respx added for HTTP mocking in integration tests
+- 39 fixtures defined covering valid/invalid configs, mock responses, sample entries
 
 ## Next
-Task 3.1: Create test fixtures
+Task 3.2: Unit tests for config
