test(python-sdk): add error unit tests

--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -25,6 +25,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 2.4 Add README and LICENSE - b6f61bd
 - [x] 3.1 Create test fixtures - 607f87a
 - [x] 3.2 Unit tests for config - a592689
+- [x] 3.3 Unit tests for errors - 56797be
 
 ## Current Task
 Awaiting next task
@@ -61,6 +62,7 @@ Awaiting next task
 - 78 tests written for config.py with 100% coverage
 - Tests cover: validate_api_key_format (valid/invalid keys), validate_config (missing fields, invalid formats, numeric bounds), default merging, optional fields, return value structure, edge cases
 - Mock urlparse to test exception handling in _is_valid_url (lines 57-58 coverage)
+- 58 tests for errors module covering: LogwellErrorCode enum (7 codes, values, uniqueness), LogwellError construction, inheritance from Exception, __str__ and __repr__ methods, edge cases
 
 ## Next
-Task 3.3: Unit tests for errors
+Task 3.4: Unit tests for queue
