test(python-sdk): add queue unit tests
47 tests covering:
- QueueConfig: construction, from_logwell_config
- BatchQueue: add, flush, size, shutdown methods
- Auto-flush on batch_size threshold
- Timer-based flush after flush_interval
- Queue overflow handling (drop oldest, on_error callback)
- Concurrent add/flush operations (thread safety)
- Edge cases (error recovery, entries during flush)

--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -26,12 +26,16 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 3.1 Create test fixtures - 607f87a
 - [x] 3.2 Unit tests for config - a592689
 - [x] 3.3 Unit tests for errors - 56797be
+- [x] 3.4 Unit tests for queue - d85f824
 
 ## Current Task
 Awaiting next task
 
 ## Learnings
 
+- 47 tests written for queue.py covering: QueueConfig construction, BatchQueue add/flush/size/shutdown, auto-flush on batch_size, timer-based flush, overflow handling, thread safety, edge cases
+- Use asyncio.Event instead of threading.Event for async test coordination to avoid race conditions
+- Concurrent flush prevention tested by using async events to coordinate slow_send mock
 - TypeScript SDK has clean 1:1 mappable module structure to Python
 - Queue uses setTimeout/clearTimeout - maps to threading.Timer in Python
 - Transport uses native fetch - httpx is the modern Python equivalent
@@ -65,4 +69,4 @@ Awaiting next task
 - 58 tests for errors module covering: LogwellErrorCode enum (7 codes, values, uniqueness), LogwellError construction, inheritance from Exception, __str__ and __repr__ methods, edge cases
 
 ## Next
-Task 3.4: Unit tests for queue
+Task 3.5: Unit tests for source_location
