test(python-sdk): add client unit tests
Add 67 comprehensive unit tests for client.py covering:
- Logwell construction with valid/invalid configs
- All log methods (debug, info, warn, error, fatal)
- Logging with metadata (none, empty, complex)
- Automatic UTC timestamp generation
- Service name handling (config, override, inheritance)
- queue_size property
- flush() method delegation and response handling
- shutdown() method (stops new logs, queue lifecycle)
- child() method (shares queue, inherits config, merges metadata)
- Nested children with accumulated metadata
- Source location capture when enabled
- _merge_metadata internal method
- Integration-style workflow tests

--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -28,6 +28,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 3.3 Unit tests for errors - 56797be
 - [x] 3.4 Unit tests for queue - d85f824
 - [x] 3.5 Unit tests for source_location - 274125b
+- [x] 3.6 Unit tests for client - d9875f4
 
 ## Current Task
 Awaiting next task
@@ -69,6 +70,9 @@ Awaiting next task
 - Tests cover: validate_api_key_format (valid/invalid keys), validate_config (missing fields, invalid formats, numeric bounds), default merging, optional fields, return value structure, edge cases
 - Mock urlparse to test exception handling in _is_valid_url (lines 57-58 coverage)
 - 58 tests for errors module covering: LogwellErrorCode enum (7 codes, values, uniqueness), LogwellError construction, inheritance from Exception, __str__ and __repr__ methods, edge cases
+- 67 tests written for client.py covering: Logwell construction (valid/invalid configs), log methods (debug/info/warn/error/fatal), logging with metadata, timestamp auto-generation (UTC), service name handling, queue_size property, flush() method, shutdown() (idempotent, rejects new logs), child() method (inherits config, shares queue, merges metadata), nested children (accumulates metadata), source location capture, _merge_metadata internal method, integration-style workflows
+- Client's shutdown() idempotency is handled at the queue level, not at the client level - client always calls queue.shutdown() but queue handles its own stopped state
+- Mock queue pattern: create MagicMock(spec=BatchQueue) with size property and async methods to capture log entries
 
 ## Next
-Task 3.6: Unit tests for client
+Task 3.7: Integration tests
