--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -29,6 +29,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 3.4 Unit tests for queue - d85f824
 - [x] 3.5 Unit tests for source_location - 274125b
 - [x] 3.6 Unit tests for client - d9875f4
+- [x] 3.7 Integration tests - be80638
 
 ## Current Task
 Awaiting next task
@@ -73,6 +74,7 @@ Awaiting next task
 - 67 tests written for client.py covering: Logwell construction (valid/invalid configs), log methods (debug/info/warn/error/fatal), logging with metadata, timestamp auto-generation (UTC), service name handling, queue_size property, flush() method, shutdown() (idempotent, rejects new logs), child() method (inherits config, shares queue, merges metadata), nested children (accumulates metadata), source location capture, _merge_metadata internal method, integration-style workflows
 - Client's shutdown() idempotency is handled at the queue level, not at the client level - client always calls queue.shutdown() but queue handles its own stopped state
 - Mock queue pattern: create MagicMock(spec=BatchQueue) with size property and async methods to capture log entries
+- 22 integration tests written using respx for HTTP mocking covering: full flow (instantiate->log->flush->verify), all log levels, batching, auto-flush on batch_size, retry on 5xx/429, non-retryable 401/400 errors, shutdown flush, shutdown idempotency, child loggers, metadata inheritance, nested children, on_flush callback, source location capture
 
 ## Next
-Task 3.7: Integration tests
+Task 4.1: Local quality check
