fix(python-sdk): address lint/type issues
- Fix E501 line too long errors in queue.py and transport.py
- All quality checks now pass:
  - mypy --strict: no issues
  - ruff check: all checks passed
  - pytest: 308 tests, 98% coverage

--- a/specs/python-sdk/.progress.md
+++ b/specs/python-sdk/.progress.md
@@ -30,6 +30,7 @@ Port the TypeScript SDK at `sdks/typescript/` to Python with full feature parity
 - [x] 3.5 Unit tests for source_location - 274125b
 - [x] 3.6 Unit tests for client - d9875f4
 - [x] 3.7 Integration tests - be80638
+- [x] 4.1 Local quality check - c46348e
 
 ## Current Task
 Awaiting next task
@@ -77,4 +78,4 @@ Awaiting next task
 - 22 integration tests written using respx for HTTP mocking covering: full flow (instantiate->log->flush->verify), all log levels, batching, auto-flush on batch_size, retry on 5xx/429, non-retryable 401/400 errors, shutdown flush, shutdown idempotency, child loggers, metadata inheritance, nested children, on_flush callback, source location capture
 
 ## Next
-Task 4.1: Local quality check
+Task 4.2: Create PR
