--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -12,6 +12,7 @@ We already have our server ready and we already have a js/ts sdk at @sdks/typesc
 - [x] 1.1 Initialize Go module and basic structure - d13c624
 - [x] 1.2 Create core types - 3bf0373
 - [x] 1.3 Create error types - d84244a
+- [x] 1.4 Create HTTP transport (minimal) - 93e827b
 
 ## Current Task
 Awaiting next task
@@ -33,4 +34,4 @@ Awaiting next task
 - No external dependencies needed - Go stdlib sufficient for HTTP, JSON, concurrency
 
 ## Next
-Task 1.4: Create HTTP transport (minimal)
+Task 1.5: Create batch queue (minimal)
