--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -12,7 +12,8 @@ We already have our server ready and we already have a js/ts sdk at @sdks/typesc
 - [x] 1.1 Initialize Go module and basic structure - d13c624
 - [x] 1.2 Create core types - 3bf0373
 - [x] 1.3 Create error types - d84244a
-- [x] 1.4 Create HTTP transport (minimal) - 93e827b
+- [x] 1.4 Create HTTP transport (minimal) - 0b3c6bb
+- [x] 1.5 Create batch queue (minimal) - 2527758
 
 ## Current Task
 Awaiting next task
@@ -34,4 +35,4 @@ Awaiting next task
 - No external dependencies needed - Go stdlib sufficient for HTTP, JSON, concurrency
 
 ## Next
-Task 1.5: Create batch queue (minimal)
+Task 1.6: Create client (minimal)
