--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -14,6 +14,7 @@ We already have our server ready and we already have a js/ts sdk at @sdks/typesc
 - [x] 1.3 Create error types - d84244a
 - [x] 1.4 Create HTTP transport (minimal) - 0b3c6bb
 - [x] 1.5 Create batch queue (minimal) - 2527758
+- [x] 1.6 Create client (minimal) - 4883afb
 
 ## Current Task
 Awaiting next task
@@ -35,4 +36,4 @@ Awaiting next task
 - No external dependencies needed - Go stdlib sufficient for HTTP, JSON, concurrency
 
 ## Next
-Task 1.6: Create client (minimal)
+Task 1.7: POC Checkpoint - Manual integration test
