--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -15,6 +15,7 @@ We already have our server ready and we already have a js/ts sdk at @sdks/typesc
 - [x] 1.4 Create HTTP transport (minimal) - 0b3c6bb
 - [x] 1.5 Create batch queue (minimal) - 2527758
 - [x] 1.6 Create client (minimal) - 4883afb
+- [x] 1.7 POC Checkpoint - Manual integration test - 2c6aad3
 
 ## Current Task
 Awaiting next task
@@ -34,6 +35,7 @@ Awaiting next task
 - Exponential backoff formula: `min(baseDelay * 2^attempt, 10s) + 30% jitter`
 - Go SDK should use functional options pattern (idiomatic Go)
 - No external dependencies needed - Go stdlib sufficient for HTTP, JSON, concurrency
+- Phase 1 (POC) complete - basic client works with Info() and auto-flush on batch size
 
 ## Next
-Task 1.7: POC Checkpoint - Manual integration test
+Task 2.1: Add config validation and functional options
