feat(go-sdk): add all log level methods
Add Debug(), Warn(), Error(), Fatal() methods following same pattern
as Info(). Add generic Log(entry) method for custom log entries with
automatic defaults for timestamp and service.

--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -21,6 +21,9 @@ We already have our server ready and we already have a js/ts sdk at @sdks/typesc
 ## Current Task
 Awaiting next task
 
+## Completed Tasks (continued)
+- [x] 2.2 Add all log level methods - 8daf042
+
 ## Learnings
 
 - Both existing SDKs have identical architecture: client -> queue -> transport pattern
@@ -41,4 +44,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Task 2.2: Add all log level methods
+Task 2.3: Add retry logic with exponential backoff
