--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -25,6 +25,7 @@ Awaiting next task
 - [x] 2.2 Add all log level methods - 8daf042
 - [x] 2.3 Add retry logic with exponential backoff - 53161df
 - [x] 2.4 Add timer-based auto-flush - 22cffbd
+- [x] 2.5 Add queue overflow protection - d8a5589
 
 ## Learnings
 
@@ -46,4 +47,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Task 2.5: Add queue overflow protection
+Task 2.6: Add shutdown and flush with context
