--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -30,6 +30,7 @@ Awaiting next task
 
 ## Completed Tasks (Phase 2 continued)
 - [x] 2.7 Add child logger - bea9e44
+- [x] 2.8 Add source location capture - 6081959
 
 ## Learnings
 
@@ -51,4 +52,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Task 2.8: Add source location capture
+Task 2.9: Add callbacks (onError, onFlush)
