feat(go-sdk): add error and flush callbacks
Wire up OnError and OnFlush callbacks from config:
- OnFlush called after successful flush with log count
- OnError called on transport errors during flush
- Callbacks inherited by child loggers
- Both internal flush() and public Flush(ctx) invoke callbacks

--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -31,6 +31,7 @@ Awaiting next task
 ## Completed Tasks (Phase 2 continued)
 - [x] 2.7 Add child logger - bea9e44
 - [x] 2.8 Add source location capture - 6081959
+- [x] 2.9 Add callbacks (onError, onFlush) - 2614db7
 
 ## Learnings
 
@@ -52,4 +53,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Task 2.9: Add callbacks (onError, onFlush)
+Phase 3: Testing (task 3.1)
