--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -28,6 +28,9 @@ We already have our server ready and we already have a js/ts sdk at @sdks/typesc
 ## Current Task
 Awaiting next task
 
+## Completed Tasks (Phase 3)
+- [x] 3.1 Unit tests for config validation - b12977a
+
 ## Completed Tasks (Phase 2 continued)
 - [x] 2.7 Add child logger - bea9e44
 - [x] 2.8 Add source location capture - 6081959
@@ -53,4 +56,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Phase 3: Testing (task 3.1)
+Phase 3: Testing (task 3.2)
