--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -30,6 +30,7 @@ Awaiting next task
 
 ## Completed Tasks (Phase 3)
 - [x] 3.1 Unit tests for config validation - b12977a
+- [x] 3.2 Unit tests for transport and retry - 3759033
 
 ## Completed Tasks (Phase 2 continued)
 - [x] 2.7 Add child logger - bea9e44
@@ -56,4 +57,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Phase 3: Testing (task 3.2)
+Phase 3: Testing (task 3.3 - Unit tests for queue)
