test(go-sdk): add queue tests
Add comprehensive unit tests for batchQueue:
- Basic add and flush operations
- FIFO ordering verification
- Flush clears queue
- Empty flush returns nil
- Size tracking
- Timer-based auto-flush
- Timer reset on each add
- Timer stops on manual flush
- Overflow drops oldest entry
- Overflow calls onError callback
- Concurrency safety
- Entry data preservation

--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -31,6 +31,7 @@ Awaiting next task
 ## Completed Tasks (Phase 3)
 - [x] 3.1 Unit tests for config validation - b12977a
 - [x] 3.2 Unit tests for transport and retry - 3759033
+- [x] 3.3 Unit tests for queue - 98c2ae7
 
 ## Completed Tasks (Phase 2 continued)
 - [x] 2.7 Add child logger - bea9e44
@@ -57,4 +58,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Phase 3: Testing (task 3.3 - Unit tests for queue)
+Phase 3: Testing (task 3.4 - Integration tests for client)
