test(go-sdk): add client integration tests
Add comprehensive integration tests for the client covering:
- Client creation with valid/invalid configs
- Logging at all levels (Debug, Info, Warn, Error, Fatal)
- Metadata merging (config + call metadata)
- Batch auto-flush when batch size reached
- Manual Flush(ctx) sends all logs
- Shutdown(ctx) flushes and stops accepting new logs
- Child logger creation and inheritance
- Child logger metadata merging
- OnError callback fires on transport error
- OnFlush callback fires after successful flush
- Source location capture when enabled
- Context cancellation during flush
- Full integration flow lifecycle
- Timer-based auto-flush
- Concurrent logging safety

Uses httptest server to capture and verify received logs.

--- a/specs/go-sdk/.progress.md
+++ b/specs/go-sdk/.progress.md
@@ -32,6 +32,7 @@ Awaiting next task
 - [x] 3.1 Unit tests for config validation - b12977a
 - [x] 3.2 Unit tests for transport and retry - 3759033
 - [x] 3.3 Unit tests for queue - 98c2ae7
+- [x] 3.4 Integration tests for client - af8a23f
 
 ## Completed Tasks (Phase 2 continued)
 - [x] 2.7 Add child logger - bea9e44
@@ -58,4 +59,4 @@ Awaiting next task
 - New() now returns (*Client, error) - breaking change from POC, but necessary for proper error handling
 
 ## Next
-Phase 3: Testing (task 3.4 - Integration tests for client)
+Phase 4: Quality Gates (task 4.1 - Add README and documentation)
